[package]
name = "stophammer-crawler"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Unified RSS feed crawler with crawl, import, ndjson, and gossip modes"

[dependencies]
stophammer-parser = { path = "../stophammer-parser" }
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
hex         = "0.4"
rusqlite    = { version = "0.31", features = ["bundled"] }
clap        = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
flate2 = "1"
tar = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[lints.clippy]
pedantic = { level = "deny" }
